feat: VectorStoreIT migration